Additional improvements to test coverage; specifically ViewQuery, SaveAttachment and CouchCacheProvider

--- a/tests/Relax.Tests.csproj
+++ b/tests/Relax.Tests.csproj
@@ -73,19 +73,39 @@
     <Compile Include="Assimilation\when_assimilating_without_caching.cs" />
     <Compile Include="Caching\when_adding_cross_reference.cs" />
     <Compile Include="Caching\when_associating_keys.cs" />
+    <Compile Include="Caching\when_deleting_item_by_key.cs" />
+    <Compile Include="Caching\when_deleting_item_by_key_and_rev.cs" />
     <Compile Include="Caching\when_getting_cache_keys_with_default_cache_key_builder.cs" />
+    <Compile Include="Caching\when_getting_documents_by_range_cached.cs" />
+    <Compile Include="Caching\when_getting_documents_by_range_uncached.cs" />
+    <Compile Include="Caching\when_getting_entire_list_cached.cs" />
+    <Compile Include="Caching\when_getting_entire_list_uncached.cs" />
+    <Compile Include="Caching\when_getting_item_by_key_and_rev_not_cached.cs" />
+    <Compile Include="Caching\when_getting_item_by_key_and_rev_when_cached.cs" />
+    <Compile Include="Caching\when_getting_item_by_key_not_cached.cs" />
+    <Compile Include="Caching\when_getting_item_by_key_when_cached.cs" />
+    <Compile Include="Caching\when_getting_paged_list_cached.cs" />
+    <Compile Include="Caching\when_getting_paged_list_uncached.cs" />
+    <Compile Include="Caching\when_invalidating_item.cs" />
+    <Compile Include="Caching\when_saving_a_collection.cs" />
+    <Compile Include="Caching\when_saving_a_document.cs" />
     <Compile Include="Caching\with_cache_provider.cs" />
     <Compile Include="Caching\with_caching_provider.cs" />
     <Compile Include="Caching\with_couch_cache_provider.cs" />
     <Compile Include="Commands\GetCommand\when_getting_all_documents.cs" />
     <Compile Include="Commands\GetCommand\when_getting_all_documents_by_ids.cs" />
     <Compile Include="Commands\GetCommand\when_getting_all_documents_paged.cs" />
+    <Compile Include="Commands\GetCommand\when_getting_documents_by_key_range.cs" />
     <Compile Include="Commands\GetCommand\with_get_all_docs.cs" />
     <Compile Include="Commands\GetCommand\with_get_all_docs_by_ids.cs" />
     <Compile Include="Commands\GetCommand\with_get_all_docs_paged.cs" />
+    <Compile Include="Commands\GetCommand\with_get_doc_by_range.cs" />
     <Compile Include="Commands\ParentDoc.cs" />
+    <Compile Include="Commands\SavingAttachments\when_saving_document_attachment.cs" />
+    <Compile Include="Commands\SavingAttachments\with_save_attachment_command.cs" />
     <Compile Include="Commands\SaveCommand\when_persisting_list_without_breaking_documents.cs" />
     <Compile Include="Commands\SaveCommand\when_persisting_list_with_breaking_documents.cs" />
+    <Compile Include="Commands\SaveCommand\when_saving_list_to_database.cs" />
     <Compile Include="Commands\SaveCommand\when_scrubbing_bulk_persist_type_tokens.cs" />
     <Compile Include="Commands\SaveCommand\with_document_list.cs" />
     <Compile Include="Commands\SaveCommand\with_nested_document_list.cs" />
@@ -184,6 +204,9 @@
     <Compile Include="Repository\with_test_document.cs" />
     <Compile Include="URI\Encoding\with_test_json.cs" />
     <Compile Include="URI\Encoding\when_encoding_json_for_url.cs" />
+    <Compile Include="URI\ViewQuery\when_testing_view_query_scenario_1.cs" />
+    <Compile Include="URI\ViewQuery\when_testing_view_query_scenario_2.cs" />
+    <Compile Include="URI\ViewQuery\with_couch_uri.cs" />
     <Compile Include="URI\when_bulk_inserting.cs" />
     <Compile Include="URI\when_cleaning_up_view.cs" />
     <Compile Include="URI\when_compacting_database.cs" />
