--- a/tests/Relax.Tests.csproj
+++ b/tests/Relax.Tests.csproj
@@ -153,6 +153,11 @@
     <Compile Include="Document\with_design_document.cs" />
     <Compile Include="Mocks\with_mock_repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\when_deleting_attachment.cs" />
+    <Compile Include="Repository\when_deleting_document_by_id.cs" />
+    <Compile Include="Repository\when_getting_from_view.cs" />
+    <Compile Include="Repository\with_delete_attachment_command.cs" />
+    <Compile Include="Repository\with_delete_document_command_by_id.cs" />
     <Compile Include="Repository\with_from_view_command.cs" />
     <Compile Include="Serialization\ComplexDocument.cs" />
     <Compile Include="Serialization\Filtering\ClassA.cs" />
@@ -205,7 +210,7 @@
     <Compile Include="Server\with_check_database_exists_command.cs" />
     <Compile Include="Server\with_create_database_command.cs" />
     <Compile Include="Server\with_create_delete_database_command.cs" />
-    <Compile Include="Repository\with_delete_document_command.cs" />
+    <Compile Include="Repository\with_delete_document_command_by_id_and_rev.cs" />
     <Compile Include="Repository\with_document_repository.cs" />
     <Compile Include="Repository\with_get_all_documents_command.cs" />
     <Compile Include="Repository\with_get_all_documents_paged_command.cs" />
