--- a/src/CouchDBIndexService/CouchDBIndexService.csproj
+++ b/src/CouchDBIndexService/CouchDBIndexService.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EAC2B6B2-8F3C-49A8-88B0-DA6CC04C4935}</ProjectGuid>
+    <ProjectGuid>{681B03FD-66ED-48D8-8C14-EC49452CDBDC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Relax.Lucene</RootNamespace>
-    <AssemblyName>Relax.Lucene</AssemblyName>
+    <RootNamespace>CouchDBIndexService</RootNamespace>
+    <AssemblyName>CouchDBIndexService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,29 +34,22 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Enyim.Caching">
-      <HintPath>..\..\lib\Enyim.Caching.dll</HintPath>
-    </Reference>
     <Reference Include="log4net">
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Lucene.Net">
       <HintPath>..\..\lib\Lucene.Net.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\lib\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="StructureMap">
+    <Reference Include="StructureMap, Version=2.5.4.0, Culture=neutral, PublicKeyToken=e60ad81abae3c223, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\StructureMap.dll</HintPath>
     </Reference>
-    <Reference Include="Symbiote.Core">
+    <Reference Include="Symbiote.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Symbiote.Core.dll</HintPath>
     </Reference>
     <Reference Include="Symbiote.Daemon">
       <HintPath>..\..\lib\Symbiote.Daemon.dll</HintPath>
-    </Reference>
-    <Reference Include="Symbiote.Eidetic">
-      <HintPath>..\..\lib\Symbiote.Eidetic.dll</HintPath>
     </Reference>
     <Reference Include="Symbiote.Log4Net">
       <HintPath>..\..\lib\Symbiote.Log4Net.dll</HintPath>
@@ -64,7 +57,8 @@
     <Reference Include="Symbiote.Lucene">
       <HintPath>..\..\lib\Symbiote.Lucene.dll</HintPath>
     </Reference>
-    <Reference Include="Symbiote.Restfully">
+    <Reference Include="Symbiote.Restfully, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Symbiote.Restfully.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -79,17 +73,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="RelaxIndexingService.cs" />
-    <Compile Include="IRelaxLuceneConfiguration.cs" />
-    <Compile Include="JsonVisitor.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelaxLuceneAssimilation.cs" />
-    <Compile Include="RelaxLuceneConfiguration.cs" />
-    <Compile Include="RelaxLuceneConfigurator.cs" />
-    <Compile Include="RelaxQueryService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Relax.Lucene\Relax.Lucene.csproj">
+      <Project>{EAC2B6B2-8F3C-49A8-88B0-DA6CC04C4935}</Project>
+      <Name>Relax.Lucene</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Relax\Relax.csproj">
       <Project>{3A8D40A3-96F9-4878-902E-7CBC3A82AEDD}</Project>
       <Name>Relax</Name>
