--- a/tests/Relax.Tests.csproj
+++ b/tests/Relax.Tests.csproj
@@ -100,14 +100,14 @@
     <Compile Include="Commands\DeletingAttachments\with_delete_attachment_command.cs" />
     <Compile Include="Commands\FromView\when_getting_from_view.cs" />
     <Compile Include="Commands\FromView\with_get_from_view_command.cs" />
-    <Compile Include="Commands\GetCommand\when_getting_all_documents.cs" />
-    <Compile Include="Commands\GetCommand\when_getting_all_documents_by_ids.cs" />
-    <Compile Include="Commands\GetCommand\when_getting_all_documents_paged.cs" />
-    <Compile Include="Commands\GetCommand\when_getting_documents_by_key_range.cs" />
-    <Compile Include="Commands\GetCommand\with_get_all_docs.cs" />
-    <Compile Include="Commands\GetCommand\with_get_all_docs_by_ids.cs" />
-    <Compile Include="Commands\GetCommand\with_get_all_docs_paged.cs" />
-    <Compile Include="Commands\GetCommand\with_get_doc_by_range.cs" />
+    <Compile Include="Commands\GettingDocuments\when_getting_all_documents.cs" />
+    <Compile Include="Commands\GettingDocuments\when_getting_all_documents_by_ids.cs" />
+    <Compile Include="Commands\GettingDocuments\when_getting_all_documents_paged.cs" />
+    <Compile Include="Commands\GettingDocuments\when_getting_documents_by_key_range.cs" />
+    <Compile Include="Commands\GettingDocuments\with_get_all_docs.cs" />
+    <Compile Include="Commands\GettingDocuments\with_get_all_docs_by_ids.cs" />
+    <Compile Include="Commands\GettingDocuments\with_get_all_docs_paged.cs" />
+    <Compile Include="Commands\GettingDocuments\with_get_doc_by_range.cs" />
     <Compile Include="Commands\GettingAttachments\when_getting_attachment.cs" />
     <Compile Include="Commands\GettingAttachments\with_get_attachment_command.cs" />
     <Compile Include="Commands\ParentDoc.cs" />
@@ -125,12 +125,12 @@
     <Compile Include="Commands\SaveCommand\with_serialized_bulk_persist.cs" />
     <Compile Include="Commands\SaveCommand\with_single_parent_document.cs" />
     <Compile Include="Commands\TestDoc.cs" />
-    <Compile Include="Commands\GetCommand\when_getting_doc_by_id.cs" />
-    <Compile Include="Commands\GetCommand\when_getting_doc_by_id_and_rev.cs" />
+    <Compile Include="Commands\GettingDocuments\when_getting_doc_by_id.cs" />
+    <Compile Include="Commands\GettingDocuments\when_getting_doc_by_id_and_rev.cs" />
     <Compile Include="Commands\with_command_factory.cs" />
     <Compile Include="Commands\with_configuration.cs" />
-    <Compile Include="Commands\GetCommand\with_get_doc_by_id_and_rev_setup.cs" />
-    <Compile Include="Commands\GetCommand\with_get_doc_by_id_setup.cs" />
+    <Compile Include="Commands\GettingDocuments\with_get_doc_by_id_and_rev_setup.cs" />
+    <Compile Include="Commands\GettingDocuments\with_get_doc_by_id_setup.cs" />
     <Compile Include="Commands\with_mock_http_action.cs" />
     <Compile Include="Configuration\TestDatabaseResolver.cs" />
     <Compile Include="Configuration\when_using_cache_without_a_cache_provider.cs" />
@@ -155,10 +155,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\when_deleting_attachment.cs" />
     <Compile Include="Repository\when_deleting_document_by_id.cs" />
+    <Compile Include="Repository\when_getting_attachment.cs" />
+    <Compile Include="Repository\when_getting_documents_by_id.cs" />
+    <Compile Include="Repository\when_getting_documents_by_range.cs" />
     <Compile Include="Repository\when_getting_from_view.cs" />
     <Compile Include="Repository\with_delete_attachment_command.cs" />
     <Compile Include="Repository\with_delete_document_command_by_id.cs" />
     <Compile Include="Repository\with_from_view_command.cs" />
+    <Compile Include="Repository\with_get_attachment.cs" />
+    <Compile Include="Repository\with_get_documents_by_keys.cs" />
+    <Compile Include="Repository\with_get_documents_by_range.cs" />
     <Compile Include="Serialization\ComplexDocument.cs" />
     <Compile Include="Serialization\Filtering\ClassA.cs" />
     <Compile Include="Serialization\Filtering\ClassB.cs" />
