--- a/demo/RelaxDemo/app.config
+++ b/demo/RelaxDemo/app.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="couchdb" value="localhost"/>
+    <add key="couchdb" value="l790.basenine.com"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
